--- a/kelas-5/hutan/bab-5/soal/organ-pernapasan-3.html
+++ b/kelas-5/hutan/bab-5/soal/organ-pernapasan-3.html
@@ -301,35 +301,35 @@
     
     const questionBank = [
       { question: "Manusia bernapas membutuhkan …", answer: "OKSIGEN" },
-      { question: "Bernapas adalah …", answer: "PROSESMENGHIRUPOKSIGENDAN MENGELUARKANKARBON DIOKSIDA" },
+      { question: "Bernapas adalah …", answer: "PROSES MENGHIRUP OKSIGEN DAN MENGELUARKAN KARBON DIOKSIDA" },
       { question: "Proses bernapas disebut juga dengan sistem …", answer: "RESPIRASI" },
       { question: "Tempat udara masuk saat bernapas adalah …", answer: "HIDUNG" },
-      { question: "Di dalam hidung terdapat rambut-rambut halus yang berfungsi untuk …", answer: "MENYARINGKOTORAN" },
-      { question: "Pada hidung terdapat selaput lendir yang berfungsi untuk …", answer: "MENYESUAIANSUHIUDARA" },
+      { question: "Di dalam hidung terdapat rambut-rambut halus yang berfungsi untuk …", answer: "MENYARING KOTORAN" },
+      { question: "Pada hidung terdapat selaput lendir yang berfungsi untuk …", answer: "MENYESUAIKAN SUHU UDARA" },
       { question: "Faring merupakan persimpangan antara rongga mulut ke …", answer: "KERONGKONGAN" },
-      { question: "Faring merupakan persimpangan antara rongga hidung ke …", answer: "KERONGKONGAN" },
-      { question: "Udara yang masuk ke dalam tubuh akan disesuaikan suhunya oleh …", answer: "SELAPUTLENDIDHIDUNG" },
-      { question: "Faring berfungsi menyalurkan aliran udara dari …", answer: "HIDUNGDANMULUTKETRAKEA" },
-      { question: "Trakea merupakan …", answer: "BATANGTENGGOROKAN BERBENTUKPIPA" },
+      { question: "Faring merupakan persimpangan antara rongga hidung ke …", answer: "TENGGOROKAN" },
+      { question: "Udara yang masuk ke dalam tubuh akan disesuaikan suhunya oleh …", answer: "SELAPUT LENDIR HIDUNG" },
+      { question: "Faring berfungsi menyalurkan aliran udara dari …", answer: "HIDUNG DAN MULUT KE TRAKEA" },
+      { question: "Trakea merupakan …", answer: "BATANG TENGGOROKAN BERBENTUK PIPA" },
       { question: "Panjang trakea …", answer: "SEKITAR 10 CM" },
-      { question: "Trakea menghubungkan …", answer: "LARINGDENGAN BRONKUSPARU" },
-      { question: "Pada trakea terdapat silia yang berfungsi …", answer: "MENYARINGDEBUDANKOTORAN" },
+      { question: "Trakea menghubungkan …", answer: "LARING DENGAN BRONKUS PARU" },
+      { question: "Pada trakea terdapat silia yang berfungsi …", answer: "MENYARING DEBU DAN KOTORAN" },
       { question: "Debu dan kotoran yang masuk ke trakea akan disaring oleh …", answer: "SILIA" },
-      { question: "Letak trakea ada di …", answer: "LEHERDAN RONGGA DADA" },
-      { question: "Bronkus adalah …", answer: "PERCABANGANDARI TRAKEA" },
-      { question: "Bronkus terdiri atas dua bagian yaitu …", answer: "BRONKUSKIRIDANBRONKUSKANAN" },
-      { question: "Bronkus merupakan saluran penghubung antara …", answer: "RONGGA HIDUNG RONGGA MULUTKANU PARU" },
+      { question: "Letak trakea ada di …", answer: "LEHER DAN RONGGA DADA" },
+      { question: "Bronkus adalah …", answer: "PERCABANGAN DARI TRAKEA" },
+      { question: "Bronkus terdiri atas dua bagian yaitu …", answer: "BRONKUS KIRI DAN BRONKUS KANAN" },
+      { question: "Bronkus merupakan saluran penghubung antara …", answer: "RONGGA HIDUNG RONGGA MULUT PARU PARU" },
       { question: "Bronkiolus merupakan cabang dari …", answer: "BRONKUS" },
       { question: "Yang berfungsi menyalurkan udara dari bronkus ke alveoli adalah …", answer: "BRONKIOLUS" },
-      { question: "Bronkiolus berfungsi mengontrol …", answer: "JUMLAHUDARA YANGMASUK DANKELUAR" },
-      { question: "Paru-paru terletak di …", answer: "DALAMTULANG RUSUK" },
+      { question: "Bronkiolus berfungsi mengontrol …", answer: "JUMLAH UDARA YANG MASUK DAN KELUAR" },
+      { question: "Paru-paru terletak di …", answer: "DALAM RONGGA DADA" },
       { question: "Jumlah paru-paru pada manusia ada …", answer: "SEPASANG" },
-      { question: "Paru-paru berfungsi …", answer: "MENAMPUNGUDARAYANGKAYA OKSIGEN" },
+      { question: "Paru-paru berfungsi …", answer: "MENAMPUNG UDARA YANG KAYA OKSIGEN" },
       { question: "Udara dari paru-paru dialirkan ke …", answer: "PEMBULUH DARAH" },
-      { question: "Alveolus adalah …", answer: "KANTONG KANTONKKECIL DIDALAM PARU" },
+      { question: "Alveolus adalah …", answer: "KANTONG KANTONG KECIL DI DALAM PARU PARU" },
       { question: "Alveolus terletak di ujung …", answer: "BRONKIOLUS" },
-      { question: "Fungsi alveolus adalah …", answer: "TEMPATPERTUKARAN OKSIDANDANKARBON DIOKSIDA" },
-      { question: "Diafragma merupakan …", answer: "DINDINGOTOT YANGMEMISAHKAN RONGGA DADADANRONGGA PERUT" },
+      { question: "Fungsi alveolus adalah …", answer: "TEMPAT PERTUKARAN OKSIGEN DAN KARBON DIOKSIDA" },
+      { question: "Diafragma merupakan …", answer: "DINDING OTOT YANG MEMISAHKAN RONGGA DADA DAN RONGGA PERUT" },
       { question: "Saat pernapasan perut, diafragma bergerak ke …", answer: "BAWAH" },
       { question: "Diafragma membantu memperluas …", answer: "PARU PARU" }
     ];
