--- a/kelas-5/hutan/bab-5/soal/organ-pernapasan-1.html
+++ b/kelas-5/hutan/bab-5/soal/organ-pernapasan-1.html
@@ -300,29 +300,29 @@
     let allGameScores = [];
     
     const questionBank = [
-      { question: "Apa yang dimaksud dengan inspirasi?", answer: "PROSESMENARIKNAPAS" },
-      { question: "Bronkiolus adalah …", answer: "CABANGDARIBRONUS" },
-      { question: "Fungsi alveolus adalah …", answer: "TEMPATPERTUKARAN" },
-      { question: "Kapan diafragma mengalami relaksasi?", answer: "SAATMENGEMBUSKAN" },
-      { question: "Fungsi trakea adalah …", answer: "MENYALURKANUDARA" },
-      { question: "Paru-paru terletak di …", answer: "RONGGARONGGA" },
+      { question: "Apa yang dimaksud dengan inspirasi?", answer: "PROSES MENARIK NAPAS" },
+      { question: "Bronkiolus adalah …", answer: "CABANG DARI BRONKUS" },
+      { question: "Fungsi alveolus adalah …", answer: "TEMPAT PERTUKARAN OKSIGEN DAN KARBONDIOKSIDA" },
+      { question: "Kapan diafragma mengalami relaksasi?", answer: "SAAT MENGEMBUSKAN UDARA" },
+      { question: "Fungsi trakea adalah …", answer: "MENYALURKAN UDARA DARI LARING KE BRONKUS" },
+      { question: "Paru-paru terletak di …", answer: "RONGGA DADA" },
       { question: "Bagaimanakah diafragma saat inspirasi?", answer: "BERKONTRAKSI" },
       { question: "Cabang trakea yang menuju paru-paru disebut …", answer: "BRONKUS" },
       { question: "Yang berfungsi mengontrol jumlah udara yang masuk dan keluar adalah …", answer: "BRONKIOLUS" },
       { question: "Dinding yang memisahkan rongga dada dan rongga perut adalah …", answer: "DIAFRAGMA" },
       { question: "Rongga hidung, rongga mulut, dan paru-paru dihubungkan oleh …", answer: "BRONKUS" },
-      { question: "Apa yang dimaksud dengan ekspirasi?", answer: "PROSESMENGEMBUSKAN" },
-      { question: "Yang berfungsi menyaring debu dan kotoran dalam trakea adalah …", answer: "RAMBUTGETAR" },
-      { question: "Fungsi bronkiolus adalah …", answer: "MENYALURKAN" },
+      { question: "Apa yang dimaksud dengan ekspirasi?", answer: "PROSES MENGEMBUSKAN UDARA" },
+      { question: "Yang berfungsi menyaring debu dan kotoran dalam trakea adalah …", answer: "SILIA" },
+      { question: "Fungsi bronkiolus adalah …", answer: "MENYALURKAN UDARA DARI BRONKUS KE ALVEOLUS" },
       { question: "Bronkus merupakan percabangan dari …", answer: "TRAKEA" },
       { question: "Paru-paru berfungsi menampung udara yang banyak mengandung …", answer: "OKSIGEN" },
       { question: "Bagaimanakah diafragma saat ekspirasi?", answer: "RELAKSASI" },
       { question: "Organ pernapasan yang menghubungkan laring ke bronkus adalah …", answer: "TRAKEA" },
-      { question: "Kapan diafragma mengalami kontraksi?", answer: "SAATMENARIKNAPAS" },
+      { question: "Kapan diafragma mengalami kontraksi?", answer: "SAAT MENARIK NAPAS" },
       { question: "Alveolus terletak di ujung …", answer: "BRONKIOLUS" },
-      { question: "Fungsi bronkus adalah …", answer: "MENYALURKANUDARA" },
+      { question: "Fungsi bronkus adalah …", answer: "MENYALURKAN UDARA DARI TRAKEA KE BRONKIOLUS MENUJU PARU-PARU" },
       { question: "Organ ini sebagian terletak di leher dan sebagian lagi terletak di rongga dada adalah …", answer: "TRAKEA" },
-      { question: "Diafragma kontraksi artinya dalam posisi …", answer: "MENDATAR" },
+      { question: "Diafragma berkontraksi artinya dalam posisi …", answer: "MENDATAR" },
       { question: "Yang menghubungkan paru-paru kanan dan kiri adalah …", answer: "BRONKUS" },
       { question: "Saat melakukan pernapasan perut, diafragma bergerak ke arah …", answer: "BAWAH" }
     ];
