--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -167,11 +167,11 @@
           <span class="emoji">💙</span> Sistem Pernapasan Manusia
       </a>
       
-      <a href="#sistem-pencernaan.html" class="map-item pencernaan">
+      <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
           <span class="emoji">🍎</span> Sistem Pencernaan
       </a>
       
-      <a href="#pertumbuhan.html" class="map-item pertumbuhan">
+      <a href="soal/pertumbuhan.html" class="map-item pertumbuhan">
           <span class="emoji">🌱</span> Pertumbuhan dan Perkembangan Manusia
       </a>
     </div>
