--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>   
+<!DOCTYPE html>    
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -65,7 +65,6 @@
       padding: 0.5rem 1rem;
       border-radius: 12px;
       color: #0288d1;
-      text-shadow: 1px 1px 2px rgba(255,255,255,0.6);
     }
 
     .title-section p {
@@ -77,8 +76,6 @@
       margin: 10px auto;
       font-size: 1rem;
     }
-
-    /* ================= MAP GRID STYLE ================= */
 
     .map-grid {
       display: grid;
@@ -99,7 +96,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       color: white;
     }
@@ -109,30 +106,16 @@
       box-shadow: 0 6px 16px rgba(0,0,0,0.25);
     }
 
-    /* ===== WARNA SESUAI MATERI ===== */
-
     .pernapasan {
       background: linear-gradient(135deg, #4fc3f7, #0288d1);
-    }
-
-    .pernapasan:hover {
-      background: linear-gradient(135deg, #81d4fa, #0277bd);
     }
 
     .pencernaan {
       background: linear-gradient(135deg, #ffb74d, #f57c00);
     }
 
-    .pencernaan:hover {
-      background: linear-gradient(135deg, #ffcc80, #ef6c00);
-    }
-
     .pertumbuhan {
       background: linear-gradient(135deg, #81c784, #388e3c);
-    }
-
-    .pertumbuhan:hover {
-      background: linear-gradient(135deg, #a5d6a7, #2e7d32);
     }
 
     .emoji {
@@ -140,56 +123,116 @@
       margin-bottom: 10px;
     }
 
+    /* ===== POPUP PESAN ===== */
+
+    .popup-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.5);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .popup {
+      background: white;
+      padding: 25px;
+      border-radius: 18px;
+      text-align: center;
+      max-width: 320px;
+      animation: pop 0.3s ease;
+      cursor: pointer;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      font-weight: bold;
+      color: #0288d1;
+    }
+
+    @keyframes pop {
+      from { transform: scale(0.7); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+
   </style>
 </head>
 <body>
 
-  <nav>
-    <div class="nav-left">
-      <img src="https://i.imgur.com/sxm7RR1.png" alt="Logo Gresik">
-      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 50px;">
-      <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
-    </div>
-    <div class="nav-right">
-      <a href="../../../index.html">🏠 Beranda</a>
-      <a href="../hutan.html">◀️ Kembali</a>
-      <a href="#">🖼️ Galeri</a>
-      <a href="../../kelas.html">🏫 Kelas</a>
-    </div>
-  </nav>
-
-  <div class="title-section">
-    <h1>🧑 Bab 5 Menjelajahi Tubuh Manusia</h1>
-    <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
-
-    <div class="map-grid">
-      <a href="soal/sistem-pernapasan.html" class="map-item pernapasan">
-          <span class="emoji">💙</span> Sistem Pernapasan Manusia
-      </a>
-      
-      <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
-          <span class="emoji">🍎</span> Sistem Pencernaan
-      </a>
-      
-      <a href="soal/pertumbuhan.html" class="map-item pertumbuhan">
-          <span class="emoji">🌱</span> Pertumbuhan dan Perkembangan Manusia
-      </a>
-    </div>
-
+<nav>
+  <div class="nav-left">
+    <img src="https://i.imgur.com/sxm7RR1.png">
+    <img src="https://i.imgur.com/tGA5UBc.png" style="height:50px;">
+    <img src="https://i.imgur.com/oWB8vKW.png">
   </div>
+  <div class="nav-right">
+    <a href="../../../index.html">🏠 Beranda</a>
+    <a href="../hutan.html">◀️ Kembali</a>
+    <a href="#">🖼️ Galeri</a>
+    <a href="../../kelas.html">🏫 Kelas</a>
+  </div>
+</nav>
 
-  <audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
-  <script>
-    const clickSound = document.getElementById("clickSound");
-    const allButtons = document.querySelectorAll("a, .map-item");
-    allButtons.forEach(btn => {
-      btn.addEventListener("click", () => {
-        clickSound.currentTime = 0;
-        clickSound.play();
-      });
-    });
-  </script>
+<div class="title-section">
+  <h1>🧑 Bab 5 Menjelajahi Tubuh Manusia</h1>
+  <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
+
+  <div class="map-grid">
+    <a href="soal/sistem-pernapasan.html" class="map-item pernapasan">
+      <span class="emoji">💙</span>Sistem Pernapasan Manusia
+    </a>
+
+    <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
+      <span class="emoji">🍎</span>Sistem Pencernaan
+    </a>
+
+    <a href="soal/pertumbuhan.html" class="map-item pertumbuhan">
+      <span class="emoji">🌱</span>Pertumbuhan & Perkembangan
+    </a>
+  </div>
+</div>
+
+<!-- POPUP -->
+<div class="popup-overlay" id="popupOverlay">
+  <div class="popup" id="popupBox"></div>
+</div>
+
+<audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
+
+<script>
+const clickSound = document.getElementById("clickSound");
+const popupOverlay = document.getElementById("popupOverlay");
+const popupBox = document.getElementById("popupBox");
+
+const pesan = [
+"🌟 Hebat! Terus semangat belajar ya! 🚀",
+"🔥 Kamu luar biasa! Masa depan cerah menunggu! 🌈",
+"💪 Jangan berhenti! Ilmu itu petualangan seru! 😄",
+"✨ Tetap semangat! Kamu pasti bisa! 🎯",
+"🧠 Belajar hari ini = sukses esok hari! 🌟"
+];
+
+function tampilPopup() {
+  popupBox.textContent = pesan[Math.floor(Math.random()*pesan.length)];
+  popupOverlay.style.display = "flex";
+}
+
+popupOverlay.addEventListener("click", () => {
+  popupOverlay.style.display = "none";
+});
+
+document.querySelectorAll("a, .map-item").forEach(btn => {
+  btn.addEventListener("click", e => {
+    clickSound.currentTime = 0;
+    clickSound.play();
+
+    const href = btn.getAttribute("href");
+
+    if (!href || href === "#") {
+      e.preventDefault();
+      tampilPopup();
+    }
+  });
+});
+</script>
 
 </body>
 </html>
-
