--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>    
+<!DOCTYPE html>      
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -106,17 +106,9 @@
       box-shadow: 0 6px 16px rgba(0,0,0,0.25);
     }
 
-    .pernapasan {
-      background: linear-gradient(135deg, #4fc3f7, #0288d1);
-    }
-
-    .pencernaan {
-      background: linear-gradient(135deg, #ffb74d, #f57c00);
-    }
-
-    .pertumbuhan {
-      background: linear-gradient(135deg, #81c784, #388e3c);
-    }
+    .pernapasan { background: linear-gradient(135deg, #4fc3f7, #0288d1); }
+    .pencernaan { background: linear-gradient(135deg, #ffb74d, #f57c00); }
+    .pertumbuhan { background: linear-gradient(135deg, #81c784, #388e3c); }
 
     .emoji {
       font-size: 2rem;
@@ -125,31 +117,56 @@
 
     /* ===== POPUP PESAN ===== */
 
-    .popup-overlay {
+    .overlay {
       position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
       display: none;
-      justify-content: center;
       align-items: center;
-      z-index: 999;
+      justify-content: center;
+      z-index: 9999;
     }
 
     .popup {
       background: white;
-      padding: 25px;
-      border-radius: 18px;
+      padding: 30px;
+      border-radius: 20px;
       text-align: center;
-      max-width: 320px;
-      animation: pop 0.3s ease;
-      cursor: pointer;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-      font-weight: bold;
-      color: #0288d1;
+      max-width: 400px;
+      animation: fadeIn 0.4s ease;
     }
 
-    @keyframes pop {
-      from { transform: scale(0.7); opacity: 0; }
+    .popup h2 {
+      color: #0288d1;
+      margin-bottom: 10px;
+    }
+
+    .popup p {
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+
+    .popup button {
+      background: #0288d1;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .popup button:hover {
+      background: #0277bd;
+      transform: scale(1.05);
+    }
+
+    @keyframes fadeIn {
+      from { transform: scale(0.8); opacity: 0; }
       to { transform: scale(1); opacity: 1; }
     }
 
@@ -157,82 +174,72 @@
 </head>
 <body>
 
-<nav>
-  <div class="nav-left">
-    <img src="https://i.imgur.com/sxm7RR1.png">
-    <img src="https://i.imgur.com/tGA5UBc.png" style="height:50px;">
-    <img src="https://i.imgur.com/oWB8vKW.png">
+  <nav>
+    <div class="nav-left">
+      <img src="https://i.imgur.com/sxm7RR1.png" alt="Logo">
+      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo">
+      <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo">
+    </div>
+    <div class="nav-right">
+      <a href="../../../index.html">🏠 Beranda</a>
+      <a href="../hutan.html">◀️ Kembali</a>
+      <a href="#">🖼️ Galeri</a>
+      <a href="../../kelas.html">🏫 Kelas</a>
+    </div>
+  </nav>
+
+  <div class="title-section">
+    <h1>🧑 Bab 5 Menjelajahi Tubuh Manusia</h1>
+    <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
+
+    <div class="map-grid">
+      <a href="soal/sistem-pernapasan.html" class="map-item pernapasan">
+          <span class="emoji">💙</span> Sistem Pernapasan Manusia
+      </a>
+      
+      <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
+          <span class="emoji">🍎</span> Sistem Pencernaan
+      </a>
+      
+      <a href="soal/pertumbuhan.html" class="map-item pertumbuhan">
+          <span class="emoji">🌱</span> Pertumbuhan dan Perkembangan Manusia
+      </a>
+    </div>
   </div>
-  <div class="nav-right">
-    <a href="../../../index.html">🏠 Beranda</a>
-    <a href="../hutan.html">◀️ Kembali</a>
-    <a href="#">🖼️ Galeri</a>
-    <a href="../../kelas.html">🏫 Kelas</a>
+
+  <!-- POPUP -->
+  <div class="overlay" id="overlay">
+    <div class="popup">
+      <h2>🚧 Sedang Dalam Proses 🚀</h2>
+      <p>
+        Wah hebat! Kamu semangat belajar! 🌟<br><br>
+        Materi ini sedang kami siapkan agar lebih seru dan menyenangkan 💙<br>
+        Tetap semangat ya! Ilmu sedang diproses khusus untukmu! ✨📚
+      </p>
+      <button onclick="tutupPopup()">Siap! 💪</button>
+    </div>
   </div>
-</nav>
 
-<div class="title-section">
-  <h1>🧑 Bab 5 Menjelajahi Tubuh Manusia</h1>
-  <p>Yuk, kita jelajahi keajaiban tubuh manusia dan memahami bagaimana tubuh kita bekerja setiap hari! 💙</p>
+  <audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
 
-  <div class="map-grid">
-    <a href="soal/sistem-pernapasan.html" class="map-item pernapasan">
-      <span class="emoji">💙</span>Sistem Pernapasan Manusia
-    </a>
+  <script>
+    const clickSound = document.getElementById("clickSound");
+    const overlay = document.getElementById("overlay");
+    const mapItems = document.querySelectorAll(".map-item");
 
-    <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
-      <span class="emoji">🍎</span>Sistem Pencernaan
-    </a>
+    mapItems.forEach(item => {
+      item.addEventListener("click", function(e) {
+        e.preventDefault(); // cegah pindah halaman
+        clickSound.currentTime = 0;
+        clickSound.play();
+        overlay.style.display = "flex";
+      });
+    });
 
-    <a href="soal/pertumbuhan.html" class="map-item pertumbuhan">
-      <span class="emoji">🌱</span>Pertumbuhan & Perkembangan
-    </a>
-  </div>
-</div>
-
-<!-- POPUP -->
-<div class="popup-overlay" id="popupOverlay">
-  <div class="popup" id="popupBox"></div>
-</div>
-
-<audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
-
-<script>
-const clickSound = document.getElementById("clickSound");
-const popupOverlay = document.getElementById("popupOverlay");
-const popupBox = document.getElementById("popupBox");
-
-const pesan = [
-"🌟 Hebat! Terus semangat belajar ya! 🚀",
-"🔥 Kamu luar biasa! Masa depan cerah menunggu! 🌈",
-"💪 Jangan berhenti! Ilmu itu petualangan seru! 😄",
-"✨ Tetap semangat! Kamu pasti bisa! 🎯",
-"🧠 Belajar hari ini = sukses esok hari! 🌟"
-];
-
-function tampilPopup() {
-  popupBox.textContent = pesan[Math.floor(Math.random()*pesan.length)];
-  popupOverlay.style.display = "flex";
-}
-
-popupOverlay.addEventListener("click", () => {
-  popupOverlay.style.display = "none";
-});
-
-document.querySelectorAll("a, .map-item").forEach(btn => {
-  btn.addEventListener("click", e => {
-    clickSound.currentTime = 0;
-    clickSound.play();
-
-    const href = btn.getAttribute("href");
-
-    if (!href || href === "#") {
-      e.preventDefault();
-      tampilPopup();
+    function tutupPopup() {
+      overlay.style.display = "none";
     }
-  });
-});
-</script>
+  </script>
 
 </body>
 </html>
