--- a/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
+++ b/kelas-5/hutan/bab-5/pernapasan-pencernaan-pertumbuhan.html
@@ -199,7 +199,7 @@
           <span class="emoji">💙</span> Sistem Pernapasan Manusia
       </a>
       
-      <a href="soal/sistem-pencernaan.html" class="map-item pencernaan">
+      <a href="soal/kpl-sistem-pencernaan.html" class="map-item pencernaan">
           <span class="emoji">🍎</span> Sistem Pencernaan
       </a>
       
