--- a/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
+++ b/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
@@ -208,8 +208,8 @@
   <div class="title-section">
     <h1>💙 Sistem Pencernaan Manusia</h1>
     <p>
-      Yuk kita mulai petualangan seru menjelajahi cara tubuh kita bernapas!<br>
-      🌬️🫁 Siap belajar dengan semangat? 💪✨
+      Yuk kita mulai petualangan seru menjelajahi bagaimana tubuh kita mencerna makanan!<br>
+  🍎🥗 Siap belajar dengan semangat? 💪✨
     </p>
 
     <div class="dropdown">
