--- a/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
+++ b/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>   
+<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
@@ -55,12 +55,12 @@
 
     .title-section {
       display: flex;
-      flex-direction: column;     
-      align-items: center;        
-      justify-content: flex-start;    
-      text-align: center;         
-      min-height: 80vh;           
-      padding: 40px 20px 20px 20px;  
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      text-align: center;
+      min-height: 80vh;
+      padding: 40px 20px 20px 20px;
     }
 
     .title-section h1 {
@@ -126,11 +126,6 @@
       text-decoration: none;
       display: block;
       font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    .dropdown-content a:hover {
-      background-color: rgba(4, 125, 173, 0.1);
     }
 
     .dropdown:hover .dropdown-content {
@@ -145,7 +140,6 @@
       top: 0;
       width: 100%;
       height: 100%;
-      overflow: auto;
       background-color: rgba(0,0,0,0.5);
       align-items: center;
       justify-content: center;
@@ -175,91 +169,86 @@
       margin-top: 20px;
       cursor: pointer;
       font-weight: bold;
-      transition: transform 0.2s ease;
-    }
-
-    .close-btn:hover {
-      transform: scale(1.05);
     }
 
     @keyframes pop {
       0% { transform: scale(0.5); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
-
   </style>
 </head>
+
 <body>
 
-  <nav>
-    <div class="nav-left">
-      <img src="https://i.imgur.com/sxm7RR1.png" alt="Logo Gresik">
-      <img src="https://i.imgur.com/tGA5UBc.png" alt="Logo Tut Wuri" style="height: 50px;">
-      <img src="https://i.imgur.com/oWB8vKW.png" alt="Logo Sekolah">
-    </div>
-    <div class="nav-right">
-      <a href="../../../../index.html">🏠 Beranda</a>
-      <a href="../pernapasan-pencernaan-pertumbuhan.html">◀️ Kembali</a>
-      <a href="#">🖼️ Galeri</a>
-      <a href="../../../kelas.html">🏫 Kelas</a>
-    </div>
-  </nav>
+<nav>
+  <div class="nav-left">
+    <img src="https://i.imgur.com/sxm7RR1.png">
+    <img src="https://i.imgur.com/tGA5UBc.png" style="height: 50px;">
+    <img src="https://i.imgur.com/oWB8vKW.png">
+  </div>
+  <div class="nav-right">
+    <a href="../../../../index.html">🏠 Beranda</a>
+    <a href="../pernapasan-pencernaan-pertumbuhan.html">◀️ Kembali</a>
+    <a href="#">🖼️ Galeri</a>
+    <a href="../../../kelas.html">🏫 Kelas</a>
+  </div>
+</nav>
 
-  <div class="title-section">
-    <h1>💙 Sistem Pencernaan Manusia</h1>
+<div class="title-section">
+  <h1>💙 Sistem Pencernaan Manusia</h1>
+  <p>
+    Yuk kita mulai petualangan seru menjelajahi bagaimana tubuh kita mencerna makanan!<br>
+    🍎🥗 Siap belajar dengan semangat? 💪✨
+  </p>
+
+  <div class="dropdown">
+    <button class="dropbtn">🚀 Mulai Petualangan</button>
+    <div class="dropdown-content">
+      <a href="organ-pencernaan.html">🌟 Petualangan 1</a>
+      <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
+      <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
+      <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
+      <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
+      <a href="#" onclick="belumAda()">⭐ Petualangan 6</a>
+      <a href="#" onclick="belumAda()">💨 Petualangan 7</a>
+      <a href="#" onclick="belumAda()">🌍 Petualangan 8</a>
+      <a href="#" onclick="belumAda()">✨ Petualangan 9</a>
+      <a href="#" onclick="belumAda()">🏆 Petualangan 10</a>
+    </div>
+  </div>
+</div>
+
+<div id="modalPesan" class="modal">
+  <div class="modal-content">
+    <h2>🍎 Petualangan Sistem Pencernaan! ✨</h2>
     <p>
-      Yuk kita mulai petualangan seru menjelajahi bagaimana tubuh kita mencerna makanan!<br>
-  🍎🥗 Siap belajar dengan semangat? 💪✨
+      Petualangan belajar sistem pencernaan sedang kami siapkan untukmu! 🚀<br>
+      Bersiaplah menjelajahi bagaimana makanan diproses di dalam tubuhmu! 💪🍽️<br>
+      Tetap semangat dan nikmati belajar dengan penuh kegembiraan! 🌟😄
     </p>
-
-    <div class="dropdown">
-      <button class="dropbtn">🚀 Mulai Petualangan</button>
-      <div class="dropdown-content">
-        <a href="organ-pencernaan.html">🌟 Petualangan 1</a>
-        <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
-        <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
-        <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
-        <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
-        <a href="#" onclick="belumAda()">⭐ Petualangan 6</a>
-        <a href="#" onclick="belumAda()">💨 Petualangan 7</a>
-        <a href="#" onclick="belumAda()">🌍 Petualangan 8</a>
-        <a href="#" onclick="belumAda()">✨ Petualangan 9</a>
-        <a href="#" onclick="belumAda()">🏆 Petualangan 10</a>
-      </div>
-    </div>
-
+    <button class="close-btn" onclick="tutupModal()">Tutup</button>
   </div>
+</div>
 
-  <div id="modalPesan" class="modal">
-    <div class="modal-content">
-      <h2>🎉 Hai Penjelajah Hebat! 🌈</h2>
-      <p>Petualangan seru ini sedang kami persiapkan khusus untukmu! 🚀💪<br>
-      Tetap semangat dan siapkan dirimu untuk menjelajahi dunia pernapasan manusia! 🫁✨<br>
-      Ayo, terus tersenyum dan nikmati belajar dengan penuh kegembiraan! 😄🌟</p>
-      <button class="close-btn" onclick="tutupModal()">Tutup</button>
-    </div>
-  </div>
+<audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
 
-  <audio id="clickSound" src="suara/button-press.mp3" preload="auto"></audio>
+<script>
+const clickSound = document.getElementById("clickSound");
+document.querySelectorAll("a").forEach(btn => {
+  btn.addEventListener("click", () => {
+    clickSound.currentTime = 0;
+    clickSound.play();
+  });
+});
 
-  <script>
-    const clickSound = document.getElementById("clickSound");
-    const allButtons = document.querySelectorAll("a");
-    allButtons.forEach(btn => {
-      btn.addEventListener("click", () => {
-        clickSound.currentTime = 0;
-        clickSound.play();
-      });
-    });
+function belumAda() {
+  document.getElementById("modalPesan").style.display = "flex";
+}
 
-    function belumAda() {
-      document.getElementById("modalPesan").style.display = "flex";
-    }
-
-    function tutupModal() {
-      document.getElementById("modalPesan").style.display = "none";
-    }
-  </script>
+function tutupModal() {
+  document.getElementById("modalPesan").style.display = "none";
+}
+</script>
 
 </body>
 </html>
