--- a/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
+++ b/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
@@ -13,7 +13,7 @@
       height: 100%;
       width: 100%;
       overflow-x: hidden;
-      background: url('https://i.imgur.com/fFfoAai.png') no-repeat center center fixed;
+      background: url('https://i.imgur.com/qKriHaW.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
