--- a/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
+++ b/kelas-5/hutan/bab-5/soal/kpl-sistem-pencernaan.html
@@ -205,7 +205,7 @@
     <button class="dropbtn">🚀 Mulai Petualangan</button>
     <div class="dropdown-content">
       <a href="organ-pencernaan.html">🌟 Petualangan 1</a>
-      <a href="#" onclick="belumAda()">🚀 Petualangan 2</a>
+      <a href="soal-sistem-pencernaan.html">🚀 Petualangan 2</a>
       <a href="#" onclick="belumAda()">🌈 Petualangan 3</a>
       <a href="#" onclick="belumAda()">🔥 Petualangan 4</a>
       <a href="#" onclick="belumAda()">🌿 Petualangan 5</a>
