--- a/kelas-5/hutan/hutan.html
+++ b/kelas-5/hutan/hutan.html
@@ -143,7 +143,7 @@
     <a href="#kekuatan.html" class="map-item"><span class="emoji">⚡</span>Kekuatan Super di Sekitar Kita</a>
     <a href="#planet.html" class="map-item"><span class="emoji">🌎</span>Planet Biru yang Penuh Teka-Teki</a>
    <a href="bab-5/pernapasan-pencernaan-pertumbuhan.html" class="map-item"><span class="emoji">🧑</span>Bab 5<br>Menjelajahi Tubuh Manusia</a>
-
+<a href="#bab-6/kekayaan-Indonesia.html" class="map-item"><span class="emoji">🌏</span>Bab 6<br>Kekayaan-Indonesia</a>
      <a href="arena.html" class="map-item"><span class="emoji">🧠</span>Arena Pintar</a>
  
   </div>
