--- a/kelas-5/lembah/detektif/detektif-bangun-datar.html
+++ b/kelas-5/lembah/detektif/detektif-bangun-datar.html
@@ -12,7 +12,7 @@
       padding: 0;
       font-family: 'Poppins', sans-serif;
       height: 100%;
-      background: url('https://i.imgur.com/SJsdg3q.png') no-repeat center center fixed;
+      background: url('https://i.imgur.com/u55gnLD.jpeg') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
