--- a/kelas-5/lembah/detektif/detektif-bangun-datar.html
+++ b/kelas-5/lembah/detektif/detektif-bangun-datar.html
@@ -86,41 +86,44 @@
       padding: 16px;
       text-align: center;
       text-decoration: none;
-      color: #0288d1;
       font-weight: bold;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.3s ease;
     }
 
-    /* TAMBAHAN WARNA KHUSUS SETIAP MENU */
+    /* WARNA CERIA SELARAS DENGAN GRADASI */
     .map-item:nth-child(1) {
       background: linear-gradient(135deg, #4facfe, #00f2fe);
-      color: white;
+      color: #ffffff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .map-item:nth-child(2) {
       background: linear-gradient(135deg, #43e97b, #38f9d7);
-      color: white;
+      color: #ffffff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .map-item:nth-child(3) {
       background: linear-gradient(135deg, #fa709a, #fee140);
-      color: white;
+      color: #ffffff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .map-item:nth-child(4) {
       background: linear-gradient(135deg, #a18cd1, #fbc2eb);
-      color: white;
+      color: #ffffff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .map-item:nth-child(5) {
       background: linear-gradient(135deg, #f7971e, #ffd200);
-      color: white;
+      color: #ffffff;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
     }
 
     .map-item:hover {
       transform: scale(1.05);
-      background-color: #dff6ff;
     }
 
     .emoji {
