--- a/kelas-5/lembah/detektif/detektif-bangun-datar.html
+++ b/kelas-5/lembah/detektif/detektif-bangun-datar.html
@@ -221,7 +221,7 @@
     <a href="misi-persegi-panjang.html" class="map-item"><span class="emoji">▭</span>Misi Persegi Panjang</a>
     <a href="misi-segitiga.html" class="map-item"><span class="emoji">🔺</span>Misi Segitiga</a>
     <a href="misi-lingkaran.html" class="map-item"><span class="emoji">⚪</span>Misi Lingkaran</a>
-    <a href="arena-detektif.html" class="map-item"><span class="emoji">🧠</span>Arena Tantangan Detektif</a>
+    <a href="soal-1.html" class="map-item"><span class="emoji">🧠</span>Arena Tantangan Detektif</a>
   </div>
 
   <!-- POPUP -->
