--- a/kelas-5/lembah/detektif/soal-1.html
+++ b/kelas-5/lembah/detektif/soal-1.html
@@ -236,7 +236,7 @@
       <div id="letter-buttons" class="flex flex-wrap justify-center gap-1"></div>
      </div>
     </div>
-    <div class="flex justify-center mt-3"><a href="sistem-pernapasan.html" class="text-white font-semibold hover:underline">Kembali</a>
+    <div class="flex justify-center mt-3"><a href="detektif-bangun-datar.html" class="text-white font-semibold hover:underline">Kembali</a>
     </div>
     <div id="retry-overlay" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
      <div class="glass-card rounded-2xl p-8 max-w-sm w-full text-center shadow-2xl animate-retry-bounce">
