--- a/kelas-5/lembah/detektif/kpl-tantangan.html
+++ b/kelas-5/lembah/detektif/kpl-tantangan.html
@@ -180,7 +180,7 @@
     </div>
     <div class="nav-right">
       <a href="../../index.html">🏠 Beranda</a>
-      <a href="../lembah.html">◀️ Kembali</a>
+      <a href="detektif-bangun-datar.html">◀️ Kembali</a>
       <a href="#">🖼️ Galeri</a>
       <a href="kelas.html">🏫 Kelas</a>
     </div>
